--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <img src="/content/images/logo.png" alt="BLC-HER logo"/> -->
+    <!-- <img class="App-logo"img src="/logo.png" alt="BLC-HER logo"/> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
